--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
@@ -87,6 +87,10 @@ body {
 // TODO: (mc) Move all later (!)
 // ------------------------------------------------------
 
+header {
+    background-color: $header-bg;
+}
+
 #page {
     background: $body-bg;
     overflow-x: hidden;  
