--- a/src/Presentation/SmartStore.Web/Themes/Flex/Views/Shared/ConfigureTheme.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Views/Shared/ConfigureTheme.cshtml
@@ -40,9 +40,15 @@
 
 		@ThemeVarEditor("body-bg", "Site Colors")
 		@ThemeVarEditor("body-color")
+		@ThemeVarEditor("text-muted")
 		@ThemeVarEditor("link-color")
 
-		@ThemeVarEditor("inverse-navbar", "Navbar")
+		@ThemeVarEditor("header-bg", "Header")
+		@ThemeVarEditor("inverse-menubar")
+		@ThemeVarEditor("inverse-shopbar")
+		@ThemeVarEditor("inverse-navbar")
+		@ThemeVarEditor("menubar-bg")
+		@ThemeVarEditor("shopbar-bg")
 		@ThemeVarEditor("megamenu-bg")
 
 		@ThemeVarEditor("google-font-1", "Typo")
