--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_shopbar.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_shopbar.scss
@@ -1,3 +1,4 @@
+/// <reference path="_variables.scss" />
 /// <reference path="bs4/scss/bootstrap.scss" />
 
 //
@@ -6,14 +7,13 @@
 
 .shopbar-section {
     padding: 1rem 0;
+    background: $shopbar-bg;
 }
 
 .shopbar {
     margin: -0.5rem;
     display: flex;
     flex-wrap: nowrap;
-
-    /*border: 1px dashed blue;*/
 }
 
 .shopbar-col-group {
@@ -21,15 +21,11 @@
     flex-wrap: nowrap;
     align-items: center;
     flex-grow: 0;
-
-    /*border: 1px dashed red;*/
 }
 
 .shopbar-col {
     padding: 0.5rem 0.375rem;
     flex-grow: 0;
-
-    /*border: 1px dotted orange;*/
 }
 
 .shop-logo {
@@ -72,7 +68,6 @@
 }
 
 .shopbar-button {
-    color: $body-color !important;
     min-width: 60px;
 
     .shopbar-button-icon {
@@ -87,8 +82,7 @@
 
     .shopbar-button-label-sm {
         display: none;
-        //color: #aaa;
-        color: $text-muted;
+        color: $header-color-muted;
         font-size: 10px;
         line-height: 1.3;
         vertical-align: middle;
@@ -128,49 +122,82 @@
 
 
 //
-// ShopBar layout (Legacy)
+// ShopBar Tools
 // --------------------------------------------------
 
-/*.shopbar-section {
-    padding: 1.25rem 0;
+.shopbar-tool {
+    position: relative;
 }
 
-.shopbar {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    margin-left:  -0.6rem;
-    margin-right:  -0.6rem;
-}
+.shopbar-button {
+    display: block;
+    text-decoration: none !important;
+    padding: 0.35rem 0.5rem;
+    border: 1px solid transparent;
+    border-radius: 0.125rem;
+    transition: all 0.12s ease;
+    cursor: pointer;
 
-.shopbar-col {
-    flex: 0 1 auto;
-    padding: 0 0.6rem;
-}
-
-.shopbar-col--stretch {
-    flex: 1 1 auto;
-    padding-right: 0;
-}
-
-@include media-breakpoint-down(md) {
-    .shopbar-search {
-        order: 3;
-        flex: 0 0 100%;
-        margin-top: 1rem;
-        padding-right: 0.6rem;
+    &:active, .open &, .show & {
+        background-image: none;
+        outline: 0;
     }
-}*/
+
+    .shopbar-button-icon,
+    .shopbar-button-label {
+        display: inline-block;
+        vertical-align: middle;
+        position: relative;
+        text-decoration: none;
+    }
+
+    .shopbar-button-label {
+        font-size: $font-size-xs;
+        line-height: 1.2;
+        vertical-align: top;
+    }
+}
 
 
-//
-// Logo
-// --------------------------------------------------
+.shopbar-light {
+    .shopbar-button { 
+        color: $header-color !important; 
 
-/*.shop-logo {
-    max-width: 11rem;
-    max-height: 6rem;
-}*/
+        &:hover {
+            border-color: rgba(#000, 0.12) rgba(#000, 0.12) rgba(#000, 0.12);
+            box-shadow: 0 1px 0 rgba(#fff, 0.15) inset, 
+                        0 1px 1px rgba(#000, 0.075);
+        }
+
+        &:active, .open &, .show & {
+            border-color: #adadad;
+            background-color: #e6e6e6;
+            box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+        }
+
+        .shopbar-button-label span { color: $header-color-muted;  }
+    }
+}
+
+.shopbar-inverse {
+    .shopbar-button { 
+        color: $header-inverse-color !important; 
+
+        &:hover {
+            border-color: rgba(#fff, 0.2) rgba(#fff, 0.2) rgba(#fff, 0.2);
+        }
+
+        &:active, .open &, .show & {
+            border-color: rgba(#fff, 0.2);
+            background-color: $header-inverse-hover-bg;
+            box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.3);
+        }
+
+        .shopbar-button-label span { color: $header-inverse-color-muted;  }
+    }
+}
+
+
 
 
 
@@ -179,8 +206,7 @@
 // --------------------------------------------------
 
 .menubar-section {
-    border-bottom: 1px solid #ddd;
-
+    background: $menubar-bg;
     .abbreviation {
         text-transform: uppercase;
     }
@@ -200,88 +226,40 @@
     position: relative;
     display: block;
     font-size: $font-size-xs;
-    color: $gray;
     padding: 1em 0.8em;
     text-decoration: none !important;
     text-transform: uppercase;
 }
 
-.menubar-link:hover,
-.menubar-link:active,
-.show .menubar-link {
-    background-color: #f5f5f5;
-    color: $body-color;
-}
-
 .menubar-group--special {
     font-weight: $font-weight-medium;
-    .menubar-link { color: #000 !important; }
 }
 
 
-//
-// ShopBar Tools
-// --------------------------------------------------
-
-.shopbar-tools {
-    /*@include clearfix();*/
+.menubar-light {
+    &.menubar-section { border-bottom: 1px solid $header-border-color; }
+    .menubar-link {
+        color: lighten($header-color, 8%);
+    }
+    .menubar-link:hover,
+    .menubar-link:active,
+    .show .menubar-link {
+        background-color: $header-hover-bg;
+        color: $header-color;
+    }
+    .menubar-group--special .menubar-link {
+        color: darken($header-color, 15%) !important;
+    }
 }
 
-.shopbar-tool {
-    /*float: left;*/
-    position: relative;
-}
-
-.shopbar-button {
-    display: block;
-    text-decoration: none !important;
-    padding: 0.35rem 0.5rem;
-    border: 1px solid transparent;
-    border-radius: 0.125rem;
-    transition: all 0.12s ease;
-    cursor: pointer;
-
-    &:hover {
-        //border-color: $btn-secondary-border;
-        border-color: rgba(0,0,0, 0.12) rgba(0,0,0, 0.12) rgba(0,0,0, 0.12);
-        box-shadow: 0 1px 0 rgba(255,255,255, 0.15) inset, 
-                    0 1px 1px rgba(0,0,0, 0.075);
+.menubar-inverse {
+    &.menubar-section { border-bottom: 1px solid $header-inverse-border-color; }
+    .menubar-link {
+        color: $header-inverse-color-muted;
     }
-    &:active, .open &, .show & {
-        border-color: #adadad;
-        background-color: #e6e6e6;
-        
-        background-image: none;
-        outline: 0;
-        box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-    }
-
-    &:not(:last-child) {
-        //margin-right: 0.9rem;
-    }
-
-    .shopbar-button-icon,
-    .shopbar-button-label {
-        display: inline-block;
-        vertical-align: middle;
-        position: relative;
-        text-decoration: none;
-    }
-
-    /*.shopbar-button-icon {
-        margin-bottom: 0;
-        > i {
-            font-size: 1.6rem;
-            line-height: 1.6rem;
-            color: $body-color;
-        }
-    }*/
-
-    .shopbar-button-label {
-        font-size: $font-size-xs;
-        line-height: 1.2;
-        vertical-align: top;
-
-        span { color: $text-muted; }
+    .menubar-link:hover,
+    .menubar-link:active,
+    .show .menubar-link {
+        background-color: $header-inverse-hover-bg;
     }
 }
