--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_shopbar.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_shopbar.scss
@@ -207,9 +207,8 @@
 
 .menubar-section {
     background: $menubar-bg;
-    .abbreviation {
-        text-transform: uppercase;
-    }
+
+    .abbreviation { text-transform: uppercase; }
 }
 
 .menubar {
