--- a/src/Presentation/SmartStore.Web/Views/Search/FacetTemplates/Rating.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Search/FacetTemplates/Rating.cshtml
@@ -19,7 +19,7 @@
 	{
 		<div class="facet-item facet-radio" data-href="@Url.FacetToggle(facet)" title="@facet.Value.Label">
 			<label>
-				<input class="facet-control-native" type="radio" name="optradio" value="@facet.Value.ToString()" @Html.Attr("checked", "checked", facet.Value.IsSelected)>
+				<input class="facet-control-native" type="radio" name="optradio-@(Model.Key)" value="@facet.Value.ToString()" @Html.Attr("checked", "checked", facet.Value.IsSelected)>
 				<span class="facet-control-ui"></span>
 				<span class="facet-label has-count" @Html.Attr("data-count", facet.HitCount.ToString("N0"), facet.HitCount > 0)>
 					<span class="rating">
