Updated PDF converter library to latest version

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_search.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_search.scss
@@ -57,7 +57,7 @@ $facet-selection-color:             darken($brand-success, 15%);
 .instasearch-icon {
     position: relative;
     top: 0.12rem;
-    font-size: inherit !important;
+    //font-size: inherit !important;
 }
 
 #instasearch-drop {
