--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_variables.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_variables.scss
@@ -4,6 +4,9 @@
 // Theme specific (non-bootstrap) variables
 // ========================================
 
+$boxed:                         false !default;
+$site-bg:                       #fff !default;
+
 $font-weight-light:             300 !default;
 $font-weight-medium:            600 !default;
 
