--- a/src/Presentation/SmartStore.Web/Themes/Flex/Views/Shared/ConfigureTheme.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Views/Shared/ConfigureTheme.cshtml
@@ -15,6 +15,9 @@
 @helper TabCommon()
 {
 	<table class="adminContent">
+		@ThemeVarEditor("boxed", "Layout")
+		@ThemeVarEditor("site-bg")
+
 		@ThemeVarEditor("gray-dark", "Grayscale")
 		@ThemeVarEditor("gray")
 		@ThemeVarEditor("gray-light")
