--- a/src/Presentation/SmartStore.Web/Themes/Flex/Views/Shared/ConfigureTheme.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Views/Shared/ConfigureTheme.cshtml
@@ -73,6 +73,15 @@
 		@ThemeVarEditor("headings-line-height")
 		@ThemeVarEditor("headings-color")
 		@ThemeVarEditor("lead-font-weight")
+
+		@ThemeVarEditor("inverse-footer", "Footer")
+		@ThemeVarEditor("footer-bg")
+		@ThemeVarEditor("footer-color")
+		@ThemeVarEditor("footer-color-muted")
+		@ThemeVarEditor("footer-inverse-color")
+		@ThemeVarEditor("footer-inverse-color-muted")
+		@ThemeVarEditor("footer-social-bg")
+		@ThemeVarEditor("footer-social-color")
 	</table>
 }
 
