--- a/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Layout.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Layout.cshtml
@@ -123,7 +123,7 @@
         }
         else
         {
-            <footer id="footer">
+            <footer id="footer" class="@(GetThemeVariable<bool>("inverse-footer") ? "footer-inverse" : "footer-light")">
                 @{ Html.RenderAction("Footer", "Common", new { area = "" }); }
 			</footer>
         }
