--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/CatalogMenu.Navbar.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/CatalogMenu.Navbar.cshtml
@@ -62,7 +62,7 @@
         var isMegaMenuActive = node.GetMetadata<bool?>("IsMegaMenuActive", false);
         var isDropDownActive = isMegaMenuActive == null ? true : (bool)isMegaMenuActive;
         
-        <li class='@(GetCssClassForNode(node, itemState))' id="main-nav-item-@item.EntityId" data-entity-id="@item.EntityId">
+        <li class='@(GetCssClassForNode(node, itemState))' id="main-nav-item-@item.EntityId" data-id="@item.EntityId">
             @if(node.HasChildren && isDropDownActive)
             {   
                 <a href="@itemUrl" class="nav-link dropdown-toggle" aria-expanded="false" data-target="#dropdown-menu-@item.EntityId">
