Theming : password recovery pages

--- a/src/Presentation/SmartStore.Web/Views/Customer/PasswordRecovery.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/PasswordRecovery.cshtml
@@ -8,35 +8,42 @@
 
 <div class="page password-recovery-page">
     <div class="page-title">
-        <h1>@T("Account.PasswordRecovery")</h1>
+        <h1 class="h3">@T("Account.PasswordRecovery")</h1>
     </div>
 
-    <div class="page-body">
-        @if (!String.IsNullOrEmpty(Model.Result))
-        {
-            <div class="alert alert-success">
-                @Model.Result
-            </div>
-        }
-        else 
-        {
-            <div class="alert alert-info">
-                @T("Account.PasswordRecovery.Tooltip")
-            </div>
-        }
-        @using (Html.BeginForm())
-        {
-            <div class="control-group">
-                @Html.LabelFor(model => model.Email, new { @class = "control-label required" })
-                <div class="controls">
-                    @Html.TextBoxFor(model => model.Email, new { @class = "email" })
-                    @Html.ValidationMessageFor(model => model.Email)
+    <div class="page-body row">
+        <div class="col-12">
+            @if (!String.IsNullOrEmpty(Model.ResultMessage))
+            {
+                <div class="alert @(Model.ResultState == PasswordRecoveryResultState.Success ? "alert-success" : "alert-danger")" >
+                    @Model.ResultMessage
                 </div>
-            </div>
+            }
+            else
+            {
+                <div class="alert alert-info">
+                    @T("Account.PasswordRecovery.Tooltip")
+                </div>
+            }
+        </div>
 
-            <div class="buttons">
-                <input type="submit" name="send-email" class="btn password-recovery-button" value="@T("Account.PasswordRecovery.RecoverButton")" />
-            </div>
-        }
+        <div class="col-12">
+            @using (Html.BeginForm())
+            {
+                <fieldset class="content-group">
+                    <div class="form-group row">
+                        @Html.LabelFor(model => model.Email, new { @class = "col-12 col-form-label required" })
+
+                        <div class="col-12">
+                            <div class="input-group">
+                                @Html.TextBoxFor(model => model.Email, new { @class = "email col-6 form-control" })
+                                <input type="submit" name="send-email" class="btn password-recovery-button" value="@T("Account.PasswordRecovery.RecoverButton")" />
+                            </div>
+                            @Html.ValidationMessageFor(model => model.Email)
+                        </div>
+                    </div>
+                </fieldset>
+            }
+        </div>
     </div>
 </div>
