--- a/src/Presentation/SmartStore.Web/Views/Customer/PasswordRecoveryConfirm.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/PasswordRecoveryConfirm.cshtml
@@ -8,40 +8,34 @@
 
 <div class="page password-recovery-page">
     <div class="page-title">
-        <h1>@T("Account.PasswordRecovery")</h1>
+        <h1 class="h3">@T("Account.PasswordRecovery")</h1>
     </div>
-    <div class="page-body">
+
+    <div class="page-body row">
         @if (!String.IsNullOrEmpty(Model.Result))
         {
-            <div class="result">
-                @Model.Result
+            <div class="col-12">
+                <div class="alert alert-success">
+                    @Model.Result
+                </div>
             </div>
         }
+
         @if (!Model.SuccessfullyChanged)
         {
-            using (Html.BeginForm())
-            {   
-                <fieldset class="form-fields">
+            using (Html.BeginForm( "Customer", "PasswordRecoveryConfirm", FormMethod.Post, new { @class = "form-horizontal" }))
+            {
+                <div class="container">
+                    <fieldset class="content-group">
+                        @Html.ControlGroupFor(model => model.NewPassword, editorType: InputEditorType.Password, required: true, breakpoint: "md")
+                        @Html.ControlGroupFor(model => model.ConfirmNewPassword, editorType: InputEditorType.Password, required: true, breakpoint: "md")
+                    </fieldset>
 
-                    <div class="control-group">
-                        @Html.LabelFor(model => model.NewPassword, new { @class = "control-label required", @for = "NewPassword" })
-                        <div class="controls">
-                            @Html.EditorFor(model => model.NewPassword)
-                            @Html.ValidationMessageFor(model => model.NewPassword)
+                    <div class="form-group row">
+                        <div class="col">
+                            <input type="submit" name="set-password" class="btn btn-danger" value="@T("Account.PasswordRecovery.ChangePasswordButton")" />
                         </div>
                     </div>
-                    <div class="control-group">
-                        @Html.LabelFor(model => model.ConfirmNewPassword, new { @class = "control-label required", @for = "ConfirmNewPassword" })
-                        <div class="controls">
-                            @Html.EditorFor(model => model.ConfirmNewPassword)
-                            @Html.ValidationMessageFor(model => model.ConfirmNewPassword)
-                        </div>
-                    </div>
-
-                </fieldset>
-            
-                <div class="buttons">
-                    <input type="submit" name="set-password" class="btn btn-danger" value="@T("Account.PasswordRecovery.ChangePasswordButton")" />
                 </div>
             }
         }
