--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -1524,6 +1524,86 @@ table.payment-method-features td {
     right: 0; 
 	.border-radius(0 4px 4px 0);
 }
+
+.switch {
+	position: relative;
+	display: inline-block;
+	vertical-align: middle;
+	margin: 0;
+	padding: 0;
+
+	> .switch-toggle {
+		position: relative;
+		display: inline-block;
+		vertical-align: middle;
+		width: 45px;
+		height: 20px;
+		border-radius: 20px;
+		background-color: #f2f2f2;
+		border: 1px solid rgba(0,0,0, 0.15);
+		box-sizing: border-box;
+		cursor: pointer;
+		transition: background-color 0.4s cubic-bezier(.54,1.85,.5,1);
+
+		&:before {
+			position: absolute;
+			left: 1px;
+			top: 1px;
+			content: ' ';
+			width: 16px;
+			height: 16px;
+			border-radius: 50%;
+			background-color: #fff;
+			box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+			transition: left 0.4s cubic-bezier(.54,1.85,.5,1);
+		}
+
+		&:after {
+			position: absolute;
+			display: inline-block;
+			box-sizing: border-box;
+			width: 27px;
+			height: 100%;
+			padding: 3px;
+			vertical-align: middle;
+			text-transform: lowercase;
+			font-size: 10px;
+			line-height: 100%;
+			text-align: center;
+
+			content: 'Aus';
+			content: attr(data-off);
+			color: #bbb;
+			left: auto;
+			right: 0;
+		}
+	}
+
+	> input[type=checkbox] {
+		position: absolute;
+		z-index: 0;
+		opacity: 0;
+	}
+
+	> input[type=checkbox]:checked ~ .switch-toggle {
+		background-color: @orange;
+
+		&:before {
+			left: 26px;
+		}
+
+		&:after {
+			content: 'An';
+			content: attr(data-on);
+			color: rgba(255,255,255, 0.75);
+			left: 0;
+			right: auto;
+		}
+	}
+}
+
+
+
 #pnlAllFlags a.flag {
     min-width: 100px;
     display: inline-block;
