--- a/src/Presentation/SmartStore.Web/Views/Customer/Register.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/Register.cshtml
@@ -127,7 +127,10 @@
 								<div class="col-md-9">
 									<div class="input-group">
 										@Html.TextBoxFor(model => model.VatNumber, new { @class = "form-control", placeholder = "Optional" })
-										<span class="input-group-addon" id="basic-addon2">@Model.VatNumberStatusNote</span>
+										@if (Model.VatNumberStatusNote.HasValue())
+										{
+											<span class="input-group-addon" id="basic-addon2">@Model.VatNumberStatusNote</span>
+										}
 									</div>
 									<div class="form-text text-muted vat-note">@T("Account.Fields.VatNumber.Note")</div>
 								</div>
