--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -1602,6 +1602,10 @@ table.payment-method-features td {
 	}
 }
 
+.multi-store-override-switch {
+	margin-right: 8px;
+}
+
 
 
 #pnlAllFlags a.flag {
